infrastructure/ingress/shared-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          - path: /dev
            pathType: Prefix
            backend:
              service:
                name: nginx-dev
                port:
                  number: 80

          - path: /qa
            pathType: Prefix
            backend:
              service:
                name: nginx-qa
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-prod
                port:
                  number: 80
